# gpu-bullet-hell-shrine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
.omc/: project-memory.json
.omc/sessions/: 0c3c980d-2ca1-4892-add0-85154d5599ee.json  6940c951-8162-411b-887c-e726b6b74059.json
.omc/state/: agent-replay-980efd53-795f-45e2-9fa2-0bb9bb9d6517.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/980efd53-795f-45e2-9fa2-0bb9bb9d6517/: autopilot-state.json
.sisyphus/run-continuation/: ses_1bce96cadffeK4npC53dgB9zvJ.json
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/compute/: Cargo.toml
crates/compute/src/: lib.rs
crates/compute/src/shaders/: bullet_update.wgsl  collision.wgsl  particle.wgsl  spatial_hash.wgsl
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/render/src/shaders/: render.wgsl
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
web/: index.html  main.ts  style.css
