[package]
name = "app"
version = "0.2.0"
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
game = { path = "../game" }
render = { path = "../render" }
compute = { path = "../compute" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1.0"
bytemuck = "1.16"
[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "Window",
    "console",
    "Performance",
]
