[package]
name = "render"
version = "0.2.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
wgpu = "22.0.0"
bytemuck = { version = "1.16", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
] }
